feat(Appointment): adding CRUD and updating swagger
